# tarea-3-t3_willberth

./: README.md  benchmark.cpp  biquad.cpp  biquad.h  bode_filters.m  cascade.cpp  cascade.h  cleanbuild.sh  design_filter.m  filter_client.cpp  filter_client.h  listen_filter.m  main.cpp  meson.build  noisy_tone.m  octave-workspace  parallel_simd.cpp  parallel_simd.h  parallel_simd_df2.cpp  parallel_simd_df2.h  parallel_simd_tdf2.cpp  parallel_simd_tdf2.h  parse_filter.h  simd_test.cpp  test_simd.m  viewfreqresp.m
mat-files/: butter_bp.mat  butter_bs.mat  butter_hp.mat  butter_lp.mat  cheby1_bp.mat  cheby1_bs.mat  cheby1_hp.mat  cheby1_lp.mat  cheby2_bp.mat  cheby2_bs.mat  cheby2_hp.mat  cheby2_lp.mat  ellip_bp.mat  ellip_bs.mat  ellip_hp.mat  ellip_lp.mat
